Basic Functionality of choosing the grid size by the user

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,10 @@
+body {
+  background-color: gray;
+}
+
 #container {
   border: red solid 1px;
+  background-color: white;
   width: 480px;
   height: 480px;
   margin: 0 auto;
