--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,104 @@ body {
   background-color: gray;
 }
 
+#wrapper {
+  background-color: lightblue;
+  height: 510px;
+  width: 900px;
+  display: flex;
+  margin: 0 auto;
+  padding: 25px;
+  border-radius: 15px;
+}
+
 #container {
-  border: red solid 1px;
   background-color: white;
   width: 480px;
   height: 480px;
   margin: 0 auto;
 }
 
-#cell :hover {
-  background-color: red;
+#buttonContainer {
+  height: 480px;
+  display: flex;
+}
+
+#buttonLayout {
+  margin-top: 65px;
+  height: 350px;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.layout-items {
+  flex: 1;
+  text-align: center;
+  vertical-align: middle;
+  /* line-height: 90px; */
+  border: solid 1px black;
+  border-radius: 5px;
+}
+
+#gridSize {
+  width: 135px;
+  height: 50px;
+  accent-color: blue;
+}
+
+.rangeTitle {
+  height: 40px;
+  width: 250px;
+  text-align: center;
+  font-size: 30px;
+  margin-top: 10px;
+}
+
+#rangeValue {
+  height: 30px;
+  width: 100px;
+  text-align: center;
+}
+
+#clearer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#clear {
+  width: 80px;
+  height: 25px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.clearTitle {
+  font-size: 30px;
+}
+
+#sizer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid 1px black;
+  border-radius: 5px;
+}
+
+#colorPicker {
+  width: 40px;
+  height: 40px;
+  align-self: center;
+}
+
+#colorSection {
+  display: flex;
+  flex-direction: column;
+}
+
+.colorTitle {
+  height: 50px;
+  text-align: center;
+  font-size: 30px;
 }
